Improved compliance to naming conventions