@@ -1,10 +1,9 @@
 /**
  *  @title       PrimativeArray.java
- *  @description TODO
+ *  @description Example code of arrays of primitive types
  *  @author      martin.spamer.
  *  @version     0.1 - first release.
- *	Created      23-Sep-2004
- *
+ *	Created      23-Sep-2004 - 11:25:50
  **/
 
 package coaching.types;
@@ -13,8 +12,6 @@ import org.slf4j.*;
 
 /**
  * Example code of arrays of primitive types.
- * @author martin.spamer
- * @version 0.1 - 11:25:50
  **/
 public class PrimitivesArray {
 
@@ -22,9 +19,9 @@ public class PrimitivesArray {
 	private static final int ARRAY_SIZE = 10;
 
 	/**
-	 * Display.
+	 * iterate the elements of an array for display.
 	 */
-	public void displayArray() {
+	public void iterateArray() {
 
 		// Declare a reference to an array of longs.
 		long[] values;
@@ -41,12 +38,12 @@ public class PrimitivesArray {
 		for (int i = 1; i < ARRAY_SIZE; i++) {
 			// assign a value to an element of array
 			values[i] = i * 100;
-			log.info(i + "=" + values[i]);
+			this.log.info(i + "=" + values[i]);
 		}
 	}
 
 	/**
-	 * Display matrix.
+	 * Display matrix, two dimensional array by nested iteration.
 	 */
 	public void displayMatrix() {
 
@@ -70,7 +67,7 @@ public class PrimitivesArray {
 			stringBuffer.append("\n");
 		}
 
-		log.info("{}", stringBuffer.toString());
+		this.log.info("{}", stringBuffer.toString());
 
 	}
 
@@ -94,12 +91,13 @@ public class PrimitivesArray {
 		final StringBuffer stringBuffer = new StringBuffer();
 		for (int firstIndex = 0; firstIndex < vector.length; firstIndex++) {
 			for (int secondIndex = 0; secondIndex < vector[firstIndex].length; secondIndex++) {
-				vector[firstIndex][secondIndex] = new Long(firstIndex * secondIndex);
+				vector[firstIndex][secondIndex] = Long.valueOf(firstIndex * secondIndex);
 				stringBuffer.append(vector[firstIndex][secondIndex]);
 				stringBuffer.append(",");
 			}
 			stringBuffer.append("\n");
 		}
-		log.info("{}", stringBuffer.toString());
+		this.log.info("{}", stringBuffer.toString());
 	}
+
 }
